--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: home
 paginate: true
 alt_title: "ElephWebb"
 sub_title: "Dev Ninja, at your service."
-image: /assets/images/background_code.jpg
+image: /assets/images/background_code_bigger_1280.jpg
 introduction: |
   I'm a **fullstack web and mobile developer** with 5 years of experience.
 
-  My toolbelt is composed by the following [tools & skills]({{ site.baseurl }}{% link hire-me.md %}).
+  My toolbelt is composed by the following [tools & skills](hire-me).
   
-  These are the **[main projects]({{ site.baseurl }}{%link projects.md %})** I've worked so far. Hopefully, the next ones will be yours :-).
+  These are the **[main projects](projects)** I've worked so far. Hopefully, the next ones will be yours :-).
 actions:
   - label: "Projects"
     icon: arrow-right
