Small changes on the text

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@ alt_title: "ElephWebb"
 sub_title: "Dev Ninja, at your service."
 image: /assets/images/background_code_bigger_1280.jpg
 introduction: |
-  I'm a **fullstack web and mobile developer** with 5 years of experience.
+  I'm a **fullstack web and mobile developer** , I'll be writing here about test-driven development, tools and best practices applied to real cases with a end goal in mind: delivery clean solutions, share knowledge and learn more about each topic by sharing comments with other developers around the globe.
+
+  The intention is to write down the content in english and then translate to spanish and portuguese, so more people can be reached even if they don't have too much knowledge in english but face the same problems that we all have faced along the way when shipping code.
 
   My toolbelt is composed by the following [tools & skills](hire-me).
   
-  These are the **[main projects](projects)** I've worked so far. Hopefully, the next ones will be yours :-).
+  These are the **[main projects](projects)** I've worked so far. Hopefully, the next ones will be yours :-). 
 actions:
   - label: "Projects"
     icon: arrow-right
