Small changes on the text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ introduction: |
 actions:
   - label: "Projects"
     icon: arrow-right
-    url: "work"
+    url: "projects"
   - label: "Hire me"
     icon: calendar
     url: "hire-me"
