--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ section:
     actions:
       - label: "Check it out"
         url: "/projects/"
-  - title: "Hire-me"
+  - title: "Lets Build Something Great"
     class: "section--inverse section--about"
     image:
     introduction: |
       Do you need a hand in launch your next big project?
     actions:
-      - label: "Hire-me"
+      - label: "Lets build something great"
         url: "/hire-me/"
 
 ads: false
